# audio-studio-pro

./: README.md  audio_studio_pro.py  pyproject.toml  run_studio.bat  ‏‏run_studio.sh
.github/workflows/: codeql-analysis.yml
