[build-system]
requires = ["setuptools>=61.0,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_studio_pro"
version = "0.1.0"
authors = [
  { name="Yaron Koresh", email="aharonkoresh1@gmail.com" },
]
description = "Audio Studio Pro is a comprehensive, AI-powered application for professional audio production."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "spaces>=0.42.0,<0.43.0",
    "gradio==5.48.0",
    "numpy==1.26.4",
]

[project.urls]
"Homepage" = "https://github.com/YaronKoresh/audio-studio-pro"
"Bug Tracker" = "https://github.com/YaronKoresh/audio-studio-pro/issues"

[project.scripts]
audio-studio-pro = "audio_studio_pro:main"

[tool.setuptools]
py-modules = ["audio_studio_pro"]


